<resources>
    <!--不能更改的翻译-->
    <string name="digits_pwd">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="smart_refresh_pulling"> Pull up to load more </string>
    <string name="smart_refresh_release">Release immediate load </string>
    <string name="smart_refresh_refreshing"> is refreshing...</string>
    <string name="smart_refresh_loading">Loading...</string>
    <string name="smart_refresh_finish">Load completed </string>
    <string name="smart_refresh_failed">Load failed </string>
    <string name="smart_refresh_nothing">No more data </string>

    <string name="title_nav_notice">Notice</string>
    <string name="title_nav_fee">Management Fee</string>
    <string name="title_nav_service">Clubhouse</string>
    <string name="title_nav_apply">Download</string>
    <string name="title_nav_contact">Contact Us</string>
    <string name="title_nav_info">Information</string>
    <string name="title_nav_setting">Setting</string>
    <!--不能更改的翻译-->

    <string name="app_name">Praia Park</string>
    <string name="OtherExpection"> System error </string>
        Ï
    <string name="NoRouteToHostException">Unable to connect to the server </string>
        
    <string name="SocketTimeoutException"> Network connection timeout </string>
        
    <string name="ConnectException">Network unavailable</string>
        
    <string name="HttpException_500"> Connection failed, please try again later </string>
        
    <string name="HttpException_504"> Request failed, please check the network connection </string>
        
    <string name="UnknownHostException">Unable to connect to the host </string>
        
    <string name="msg_quite_remind"> Press again to exit </string>
        
    <string name="msg_dialog_loading">Loading...</string>

        
    <string name="title_broadcast">Notice</string>
        
    <string name="title_edit_name">Set nickname </string>
        
    <string name="title_download_table">Download </string>
        
    <string name="title_notice">Notification </string>
        
    <string name="title_add_order">Add an appointment</string>

        

        
    <string name="title_nav_exit">Exit </string>
        
    <string name="title_scan">Scan </string>
        
    <string name="title_reset_pwd">Change password</string>

    <string name="title_profile">Profile</string>

    <string name="title_setting_lang">Language</string>

    <string name="text_pdf_share">Share</string>
        
    <string name="text_setting_profile">Profile </string>
        
    <string name="text_setting_lang">Language</string>
        
    <string name="text_setting_about">About us</string>
        
    <string name="text_setting_provision">General Terms and Conditions </string>
        
    <string name="text_setting_declare">Privacy Policy Statement</string>
        
    <string name="text_setting_version">App version </string>

    <string name="text_setting_lang_ch">简体</string>
        
    <string name="text_setting_lang_tw">繁體</string>
        
    <string name="text_setting_lang_en">English</string>
        
    <string name="text_setting_lang_confitm">Finish</string>

        
    <string name="text_contact_us_title">Title: </string>
        
    <string name="text_contact_us_content">Content: </string>
        
    <string name="text_contact_us_name">Unit and Name: </string>
        
    <string name="text_contact_us_mobile">Phone: </string>
        
    <string name="text_contact_us_title_hint"></string>
        
    <string name="text_contact_us_content_hint"></string>
        
    <string name="text_contact_us_desc">Remarks: </string>
        
    <string name="text_contact_us_desc_detail">Remarks:
        \n1.For message information, Praia Park customer service center will reply in office hours or within 24 hours.
        \n<u>Customer Service Center Office Hours：</u>
        \n•&#160;Monday to Friday 09:00 – 13:00/14:00 – 17:30
        \n•&#160;Saturday 09:00 – 13:00
        \n•&#160;Sunday and Public Holidays Off
        \n2.In case of emergency, you can contact the service hotline：(853)2883 3232
    </string>
        
    <string name="text_profile_account_hint">Household number </string>
        
    <string name="text_profile_address_hint">Address </string>
        
    <string name="text_profile_header_hint">Avatar </string>
        
    <string name="text_profile_useraccount_hint">User account </string>
        
    <string name="text_profile_changepwd_hint">Change password</string>
        
    <string name="text_profile_name_hint">Nickname </string>
        
    <string name="text_profile_mobile_hint">Phone</string>
        
    <string name="text_profile_unset_hint"> Empty </string>

    <string name="text_download_car_stop">Request parking lot access PDF</string>
        
    <string name="text_download_fixtures">Request to decorate PDF</string>

        
    <string name="text_login_account_hint">Account </string>
        
    <string name="text_login_pwd_hint">Password</string>
        
    <string name="text_login_forget_pwd">Forget password</string>
        
    <string name="text_login_confirm">Login </string>
        
    <string name="text_login_register">Register </string>
        
    <string name="text_login_declare">Privacy Policy</string>

        
    <string name="text_register_user_account">No: </string>
        
    <string name="text_register_account_hint">Account </string>
        
    <string name="text_register_repwd_hint">Confirm password </string>
        
    <string name="text_register_confirm">Submit</string>
        
    <string name="text_register_confirm_scan">Scan QR Code</string>
        
    <string name="text_register_pwd_not_same">Passwords do not match</string>

        
    <string name="text_forget_pwd">Forget password</string>
        
    <string name="text_forget_new_pwd">New password</string>
        
    <string name="text_forget_confirm_pwd">Confirm new password</string>

        
    <string name="text_club_service_title_order">Booking</string>
    <string name="text_club_service_title_rule">Clubhouse Rules</string>
    <string name="text_club_service_title_price_list">Price List</string>

    <string name="text_club_service_hope">Coming Soon</string>
    <string name="text_club_service_building">程序正在建设中..</string>
        
    <string name="text_add_order_apply">Unit</string>
        
    <string name="text_add_order_name">Customer name</string>
        
    <string name="text_add_order_input_name">Enter name</string>
        
    <string name="text_add_order_mobile">Contact phone </string>
        
    <string name="text_add_order_input_mobile">Enter phone number </string>
        
    <string name="text_add_order_devices">Equipment price</string>
        
    <string name="text_add_order_choose_devices">Select device </string>
        
    <string name="text_add_order_price">Room price </string>
        
    <string name="text_add_order_start_time">Booking time period </string>
        
    <string name="text_add_order_end_time">End time </string>
        
    <string name="text_add_order_amount">Total </string>
        
    <string name="text_add_order_remind">Note: Clubhouse Facilities must be booking 7 days in advance.The booking method can be made in APP, telephone or on-site appointment. Clubhouse is based on the principle of ”booking time”. After booking the facility in the APP, clubhouse staff will call the customer to confirm whether the booking is successful. Full pay must be paid within 24 hours after confirm the booking. If the time is exceeded, the booking will be canceled.If you have any questions, please call (853)28833232, thank you!</string>
        
    <string name="text_add_order_add">Pre-array </string>
        
    <string name="text_info_title_discount">Promotion</string>

    <string name="text_info_title_unit">Unit</string>
        
    <string name="text_info_title_traffic">Traffic</string>
        
    <string name="text_info_title_around">​​Peripheral</string>
        
    <string name="text_order_record_time">Reservation time </string>
        
    <string name="text_order_record_status">Reservation status </string>
        
    <string name="text_order_record_status_prepay">Unpaid</string>
        
    <string name="text_order_record_status_paid">Paid</string>
        
    <string name="text_order_record_status_ready">Backup </string>
        
    <string name="text_order_record_status_finish"> is completed </string>

        
    <string name="text_reset_pwd_old"> Pld password: </string>
        
    <string name="text_reset_pwd_new"> New password: </string>
        
    <string name="text_reset_pwd_confirm"> Confirm password: </string>
        
    <string name="text_reset_pwd_old_hint">Enter the old password</string>

    <string name="text_announcement_company">Savills</string>

    <!--第一個版本翻譯結束-->
    <!--第二個版本翻譯開始-->
    <string name="text_add_order_appoint_date">Booking date:</string>
    <string name="text_add_order_appoint_date_period">Booking history:</string>
    <string name="text_add_order_period">Time Period</string>
    <string name="text_add_order_payment_status">Status</string>
    <string name="text_add_order_apply_date">Application Time</string>
    <string name="text_add_order_selected">selected</string>
    <string name="text_add_order_selected_period">Submit</string>
    <string name="text_dialog_title_selected_period">Select time period</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_add_order_submit">Finish</string>
    <string name="text_add_order_hour">h</string>
    <!--第二個版本翻譯結束-->
</resources>