<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/default_bg"
        android:orientation="vertical">

        <include
            android:id="@+id/layoutHeader"
            layout="@layout/layout_common_header" />

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnableLoadMore="true"
            app:srlEnableFooterFollowWhenLoadFinished="true"
            app:srlEnableScrollContentWhenLoaded="true">

            <com.scwang.smartrefresh.layout.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlEnableLastTime="false"
                app:srlTextFailed="@string/smart_refresh_failed"
                app:srlTextFinish="@string/smart_refresh_finish"
                app:srlTextLoading="@string/smart_refresh_loading"
                app:srlTextPulling="@string/smart_refresh_pulling"
                app:srlTextRefreshing="@string/smart_refresh_refreshing"
                app:srlTextRelease="@string/smart_refresh_release" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlClassicsSpinnerStyle="Translate"
                app:srlTextFailed="@string/smart_refresh_failed"
                app:srlTextFinish="@string/smart_refresh_finish"
                app:srlTextLoading="@string/smart_refresh_loading"
                app:srlTextNothing="@string/smart_refresh_nothing"
                app:srlTextPulling="@string/smart_refresh_pulling"
                app:srlTextRelease="@string/smart_refresh_release" />
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    </LinearLayout>
</layout>